--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -50,7 +50,7 @@
                       <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="loginForm.valid ? login() : validar_campos(loginForm)"><i class="fas fa-unlock"></i>&nbsp;Entrar</button>
                     </div>
                     <div class="col-6 text-right">
-                      <button type="button" class="btn btn-link btn-sm danger" (click)="onRecoveryPassword()" >¿Olvidaste tu contraseña?</button>
+                      <button type="button" class="btn btn-link btn-sm" (click)="onRecoveryPassword()" >¿Olvidaste tu contraseña?</button>
                     </div>
                   </div>
                 </form>
