--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -66,10 +66,10 @@
         <div class="col-lg-3">
           <div class="row justify-content-start">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1">
-              <button (click)="buscarSalidas()" class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
+              <button (click)="buscarSalidas()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-              <button (click)="buscaSalidasNueva()" class="btn btn-pill btn-primary"> Nueva Busqueda</button>
+              <button (click)="buscaSalidasNueva()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
             </div>
           </div>
         </div>    
