change on footer
change

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -91,7 +91,7 @@
   </main>
 </div>
 <app-footer>
-  <div class="container footer-container text-center text-md-left ml-0 mt-3">
+  <div class="container footer-container text-center text-md-left mt-3">
     <!-- Grid row -->
     <div class="row">
       <!-- Grid column -->
@@ -102,7 +102,7 @@
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
       <!-- Grid column -->
-      <div class="col-md-1 mr-3">
+      <div class="col-md-1 mr-1">
         <h6><strong>Servicios</strong></h6>
         <ul class="dash">
           <li>Prealertas</li>
@@ -115,7 +115,7 @@
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
       <!-- Grid column -->
-      <div class="col-md-2 ml-0">
+      <div class="col-md-2">
         <h6><strong>&nbsp;</strong></h6>
         <ul class="dash">
           <li>Consulta de mercancías</li>
