--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -59,7 +59,7 @@
 }
 //footer-container
 .app-footer{
-    margin-left: 0px!important;
+    // margin-left: 0px!important;
     border: none !important;
     z-index: 1000;
 }
