--- a/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
+++ b/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="row  mt-4"  *ngIf="rfcVisible">
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <mat-form-field class="input-full-width">
               <select matNativeControl [(ngModel)]="RFCcliente" #selgetRFCc="ngModel" name="selgetRFCc" id="selgetRFCc" required placeholder="Seleccione un cliente">
                 <option label="--Selecciona un cliente --" [ngValue]="0">--Selecciona un cliente --</option>
@@ -135,10 +135,42 @@
                 El campo RFC Cliente es <strong>requerido</strong>
               </mat-error>
             </mat-form-field>
+          </div> -->
+          <div class="table-responsive">
+              <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      
+                <!-- RazonSocial Column -->
+                <ng-container matColumnDef="RazonSocial">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Razon Social </th>
+                  <td mat-cell *matCellDef="let element"> {{element.RazonSocial}} </td>
+                </ng-container>
+
+                <!-- RazonSocial Column -->
+                <ng-container matColumnDef="TipoCliente">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo Cliente </th>
+                  <td mat-cell *matCellDef="let element"> {{element.TipoCliente}} </td>
+                </ng-container>
+
+                <!-- RazonSocial Column -->
+                <ng-container matColumnDef="NumCuentas">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Num Cuentas </th>
+                  <td mat-cell *matCellDef="let element"> {{element.NumCuentas}} </td>
+                </ng-container>
+
+                <!-- Acciones Column -->
+                <ng-container matColumnDef="acciones">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+                  <td mat-cell *matCellDef="let element"> <a class="btn btn-link btn-sm" (click)="crearUserByAdmin(element)" href="javascript: void(0);"><i class="icon-plus"></i> Seleccionar</a> </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
           </div>
-          <div class="col-md-4 text-center">
+      
+          <!-- <div class="col-md-4 text-center">
             <button type="submit" class="btn btn-primary btn-pill btn-sm" (click)="crearUserByAdmin(selgetRFCc.value)" >Siguiente</button>
-          </div>
+          </div> -->
         </div>
         <div class="row mt-3 align-items-center">
           
